[Qt][WK2] QQuickWebView breaks when an empty url is loaded https://bugs.webkit.org/show_bug.cgi?id=75445

Patch by Rafael Brandao <rafael.lobo@openbossa.org> on 2012-01-06
Reviewed by Tor Arne Vestbø.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebView::load):
* UIProcess/API/qt/tests/qmltests/WebView/tst_loadUrl.qml: Check if a request to load
an empty url is ignored. 'about:blank' should be used instead to load an empty page.
* UIProcess/API/qt/tests/qmltests/qmltests.pro:

Canonical link: https://commits.webkit.org/92499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104287 268f45cc-cd09-0410-ab3c-d52691b4dbfc